fix(*): try fixing instabilities over http exchanges over newest jdks