@@ -1380,7 +1380,6 @@
                 <configuration>
                     <trimStackTrace>false</trimStackTrace>
                     <useSystemClassLoader>true</useSystemClassLoader>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=512m -Djava.util.Arrays.useLegacyMergeSort=true</argLine>
                     <systemPropertyVariables>
                         <spring.profiles.active>${spring.profiles.active}</spring.profiles.active>
                     </systemPropertyVariables>
